--- a/src/app/features/modals/settings/about-modal/about-modal.component.scss
+++ b/src/app/features/modals/settings/about-modal/about-modal.component.scss
@@ -347,7 +347,7 @@
       background: var(--view-bg-color);
       border-radius: var(--radius-sm);
       padding: var(--space-lg);
-      box-shadow: var(--shadow-light);
+      box-shadow: var(--shadow-gnome);
       transition: var(--transition-standard);
       will-change: box-shadow;
 
