--- a/src/app/features/modals/settings/keyboard-shortcuts-modal/keyboard-shortcuts-modal.component.scss
+++ b/src/app/features/modals/settings/keyboard-shortcuts-modal/keyboard-shortcuts-modal.component.scss
@@ -47,7 +47,7 @@
             font-size: var(--font-size-sm);
             color: var(--window-fg-color);
             text-transform: uppercase;
-            box-shadow: var(--shadow-light);
+            box-shadow: var(--shadow-gnome);
             transition: var(--transition-fast);
 
             &:last-child {
