--- a/src/app/features/modals/settings/preferences-modal/preferences-modal.component.scss
+++ b/src/app/features/modals/settings/preferences-modal/preferences-modal.component.scss
@@ -152,7 +152,7 @@
   background: var(--card-bg-color);
   padding: var(--space-md) var(--space-lg);
   border-radius: var(--radius-sm);
-  box-shadow: var(--shadow-light);
+  box-shadow: var(--shadow-gnome);
   gap: var(--space-md);
 
   .setting-item-header {
