--- a/src/app/features/modals/settings/rclone-config-modal/rclone-config-modal.component.scss
+++ b/src/app/features/modals/settings/rclone-config-modal/rclone-config-modal.component.scss
@@ -111,7 +111,7 @@
 
     &:hover,
     &:focus {
-      box-shadow: var(--shadow-light);
+      box-shadow: var(--shadow-gnome);
     }
 
     .config-item-content {
