--- a/src/app/layout/titlebar/titlebar.component.scss
+++ b/src/app/layout/titlebar/titlebar.component.scss
@@ -42,6 +42,7 @@
 
   .checkmark {
     width: 20px;
+    opacity: 1;
     height: 20px;
     background: var(--gnome-light-1);
     border-radius: 50%;
