--- a/src/app/shared/components/password-manager/password-manager.component.scss
+++ b/src/app/shared/components/password-manager/password-manager.component.scss
@@ -48,7 +48,7 @@
     align-items: flex-start;
     padding: var(--space-md);
     background: var(--bg-elevated);
-    box-shadow: var(--shadow-light);
+    box-shadow: var(--shadow-gnome);
     border-radius: var(--radius-md);
 
     .store-content {
