--- a/src/app/shared/components/setting-control/setting-control.component.scss
+++ b/src/app/shared/components/setting-control/setting-control.component.scss
@@ -32,7 +32,7 @@
   background: var(--secondary-background);
   border-radius: var(--radius-lg);
   padding: var(--space-lg);
-  box-shadow: var(--shadow-light);
+  box-shadow: var(--shadow-gnome);
   display: flex;
   align-items: center;
   justify-content: space-between;
