--- a/src/app/shared/detail-shared/settings-panel/settings-panel.component.scss
+++ b/src/app/shared/detail-shared/settings-panel/settings-panel.component.scss
@@ -39,7 +39,7 @@
   background: var(--view-bg-color);
   border-radius: var(--item-radius);
   transition: var(--transition-standard);
-  box-shadow: var(--shadow-light);
+  box-shadow: var(--box-shadow);
 
   .setting-key {
     font-size: var(--font-size-sm);
