--- a/src/app/shared/overviews-shared/remotes-panel/remotes-panel.component.scss
+++ b/src/app/shared/overviews-shared/remotes-panel/remotes-panel.component.scss
@@ -10,7 +10,7 @@
 .remotes-panel {
   margin-bottom: 2rem;
   border-radius: var(--card-border-radius-large) !important;
-  box-shadow: var(--shadow-light);
+  box-shadow: var(--shadow-gnome);
   max-height: 60vh;
   background: var(--view-bg-color);
 
