--- a/src/app/shared/overviews-shared/status-overview-panel/status-overview-panel.component.scss
+++ b/src/app/shared/overviews-shared/status-overview-panel/status-overview-panel.component.scss
@@ -10,7 +10,7 @@
 .status-panel {
   margin-bottom: 2rem;
   border-radius: var(--card-border-radius-large) !important;
-  box-shadow: var(--shadow-light);
+  box-shadow: var(--shadow-gnome);
   transition: var(--transition-standard);
   background: var(--view-bg-color);
 
