--- a/src/app/styles/_shared-modal.scss
+++ b/src/app/styles/_shared-modal.scss
@@ -12,7 +12,7 @@
   position: relative;
 
   &.scrolled {
-    box-shadow: var(--shadow-light);
+    box-shadow: var(--shadow-gnome);
   }
 
   &.scrolled p {
