--- a/src/app/features/components/dashboard/app-detail/app-detail.component.html
+++ b/src/app/features/components/dashboard/app-detail/app-detail.component.html
@@ -10,6 +10,7 @@
             move: selectedSyncOperation() === 'move' && operationActiveState(),
             bisync: selectedSyncOperation() === 'bisync' && operationActiveState(),
             mount: selectedRemote().mountState?.mounted,
+            serve: selectedRemote().serveState?.isOnServe,
           }"
         >
           <mat-icon
