--- a/src/app/features/components/dashboard/general-overview/general-overview.component.scss
+++ b/src/app/features/components/dashboard/general-overview/general-overview.component.scss
@@ -230,16 +230,15 @@
     transition: var(--transition-standard);
     border-radius: var(--card-border-radius);
     background: var(--window-bg-color);
-    box-shadow: var(--shadow-light);
+    box-shadow: var(--box-shadow);
     animation: fadeIn 0.6s ease-out;
-    will-change: transform, box-shadow;
+
+    &:hover {
+      background: var(--hover-bg-color);
+    }
 
     &.disabled {
-      opacity: 0.6;
-
-      &:hover {
-        transform: none;
-      }
+      filter: grayscale(1);
     }
 
     &.stopping {
@@ -548,7 +547,7 @@
   background: var(--view-bg-color);
   border-radius: 8px;
   margin-bottom: 12px;
-  box-shadow: var(--shadow-light);
+  box-shadow: var(--shadow-gnome);
   overflow: hidden;
 
   .panel-label {
@@ -580,7 +579,7 @@
 .cdk-drag-preview {
   box-sizing: border-box;
   border-radius: 16px;
-  box-shadow: var(--shadow-light);
+  box-shadow: var(--shadow-gnome);
   background-color: var(--window-bg-color);
   padding: 0;
 
@@ -624,11 +623,13 @@
 
 .info-item,
 .detail-item {
-  display: flex;
-  flex-direction: column;
   gap: 4px;
   padding: 12px;
+  display: flex;
   border-radius: 8px;
+  flex-direction: column;
+  box-shadow: var(--box-shadow);
+  background: var(--view-bg-color);
 
   .label {
     font-size: clamp(10px, 2vw, 12px);
