--- a/src/app/features/modals/settings/restore-preview-modal/restore-preview-modal.component.scss
+++ b/src/app/features/modals/settings/restore-preview-modal/restore-preview-modal.component.scss
@@ -18,7 +18,7 @@
     background: var(--window-bg-color);
     border-radius: var(--card-border-radius);
     padding: var(--space-md);
-    box-shadow: var(--shadow-light);
+    box-shadow: var(--shadow-gnome);
     transition: var(--transition-fast);
 
     .card-header {
@@ -66,7 +66,7 @@
         gap: var(--space-md);
         padding: var(--space-sm);
         border-radius: var(--radius-sm);
-        box-shadow: var(--shadow-light);
+        box-shadow: var(--shadow-gnome);
 
         .info-icon-wrapper {
           display: flex;
@@ -155,7 +155,7 @@
           gap: var(--space-md);
           padding: var(--space-md);
           border-radius: var(--radius-sm);
-          box-shadow: var(--shadow-light);
+          box-shadow: var(--shadow-gnome);
 
           .item-icon-wrapper {
             display: flex;
@@ -231,7 +231,7 @@
         border-radius: var(--radius-sm);
         font-style: italic;
         color: var(--dim-color);
-        box-shadow: var(--shadow-light);
+        box-shadow: var(--shadow-gnome);
 
         .quote-icon {
           font-size: var(--icon-size-md);
