--- a/src/app/shared/overviews-shared/remote-card/remote-card.component.scss
+++ b/src/app/shared/overviews-shared/remote-card/remote-card.component.scss
@@ -1,12 +1,15 @@
 .remote-card {
   position: relative;
   transition: var(--transition-standard);
-  border-radius: var(--card-border-radius);
   background: var(--window-bg-color);
-  box-shadow: var(--shadow-light);
+  box-shadow: var(--box-shadow);
   animation: fadeIn 0.6s ease-out;
   animation-fill-mode: both;
   will-change: transform;
+
+  &:hover {
+    background: var(--hover-bg-color);
+  }
 
   &.mounted {
     box-shadow: 0 0 0 1px rgba(var(--accent-color-rgb), 0.2);
@@ -79,8 +82,6 @@
   }
 
   &.inactive-remote {
-    border-color: rgba(var(--window-fg-color-rgb), 0.3);
-
     .remote-info .icon-container {
       background: rgba(var(--window-fg-color-rgb), 0.1);
 
