--- a/src/app/features/modals/settings/restore-preview-modal/restore-preview-modal.component.scss
+++ b/src/app/features/modals/settings/restore-preview-modal/restore-preview-modal.component.scss
@@ -66,7 +66,7 @@
         gap: var(--space-md);
         padding: var(--space-sm);
         border-radius: var(--radius-sm);
-        box-shadow: var(--shadow-gnome);
+        box-shadow: var(--box-shadow);
 
         .info-icon-wrapper {
           display: flex;
@@ -155,7 +155,7 @@
           gap: var(--space-md);
           padding: var(--space-md);
           border-radius: var(--radius-sm);
-          box-shadow: var(--shadow-gnome);
+          box-shadow: var(--box-shadow);
 
           .item-icon-wrapper {
             display: flex;
